dnl RCS:         $Header: /afs/cs.cmu.edu/user/tmwong/Cvs/fscachesim/configure.in,v 1.6 2002/03/14 22:55:41 tmwong Exp $
dnl Description: fscachesim configure.in
dnl Created by:  T.M. Wong <tmwong+@cs.cmu.edu>

dnl
dnl Process this file with autoconf to produce a configure script.
dnl

AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_SYSTEM

dnl
dnl Initializes automake
dnl

AM_INIT_AUTOMAKE(fscachesim,1.0)
AM_CONFIG_HEADER(config.h)

dnl
dnl Checks for programs.
dnl

AC_PROG_CC
AC_PROG_CXX

dnl
dnl Checks for libraries.
dnl

dnl
dnl Checks for header files.
dnl

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl

AC_C_CONST
AC_TYPE_SIZE_T

AC_CHECK_TYPE(uint16_t, unsigned short int)
AC_CHECK_TYPE(uint32_t, unsigned int)

dnl
dnl Checks for library functions.
dnl

AC_CHECK_FUNCS(strerror)

dnl
dnl Output Makefiles
dnl

AC_OUTPUT( \
	Makefile	\
	doc/Makefile	\
	mambolib/Makefile \
	scripts/Makefile
	)
